2009-01-05  Alper KANAT  <alperkanat@raptiye.org>

	* TODO, templates/users/profile.html, extra/openid_consumer.py,
	users/backends.py, users/forms.py, users/models.py, users/views.py: changed
	the multiple openids per account design into 1-1 since it was hard and
	unnecessary for raptiye.. users don't have to logout when they change their
	passwords.. also there're some code improvements.. some db changes have been
	done with this revision btw..
	  
2009-01-04  Alper KANAT  <alperkanat@raptiye.org>

	* templates/users/activation.html: deleted unused template file..
	* TODO: added and removed some..
	* extra/messages.py: added new openid messages..
	* extra/openid_consumer.py: removed unnecessary imports, fixed design
	mistakes and some bugs..
	* media/css/style.css, templates/users/forgotten_password.html: forgotton
	password page now informs the user about the operation.. (changing password
	etc..)
	* users/backends.py: fixed bugs in openid authentication backend..
	* users/forms.py: fixed bugs in user related forms.
	* users/views.py: fixed stupid mistakes of mine.. more to be fixed soon..
	* TODO, extra/messages.py, users/views.py: fixed a bug.. (uncaught
	exception)
	* TODO, settings-example.py: rearranged all file in alphabetical and group
	order..

2009-01-02  Alper KANAT  <alperkanat@raptiye.org>

	* extra/exceptions.py: added some custom made exceptions to catch some errors..
	* extra/openid_consumer.py, media/images/openid.gif, users/backends.py,
	extra/messages.py, media/css/style.css, templates/users/login.html,
	users/models.py, users/urls.py, users/views.py: OpenID support is added..
	will be ready after more tests and bug fixes..
	* TODO: added new stuff..
	* settings-example.py: accepted Recep KIRMIZI's patch.. also made a lot of
	changes to the file to make it better.. will arrange it completely soon..
	* blog/feeds.py: fixed a long standing, stupid bug..
	* templates/blog/homepage.html: fixed a stupid, unrecognised bug..