@@ -113,7 +113,7 @@ Sevgilerle..
 
 raptiye yorum bekçisi"""
 
-OPENID_DISCOVERY_FAILURE = u"openid hesabınız tanımlanamadı.. lütfen doğru bir adres girdiğinizden emin olun."
-OPENID_FAILURE_MESSAGE = u"openid hesabı ile girişte bir hata oluştu. lütfen daha sonra tekrar deneyin."
+OPENID_DISCOVERY_FAILURE = u"openid adresiniz tanımlanamadı.. lütfen doğru bir adres girdiğinizden emin olun."
+OPENID_FAILURE_MESSAGE = u"openid adresiniz ile girişte bir hata oluştu. lütfen daha sonra tekrar deneyin."
 OPENID_EXISTING_USERNAME = u"seçtiğiniz kullanıcı adı kullanılıyor.. lütfen başka bir kullanıcı adıyla tekrar deneyin."
-OPENID_AUTH_FAILURE = u"openid hesabınızla raptiye'ye girişte bir sorun oluştu.. lütfen daha sonra tekrar deneyin."
+OPENID_AUTH_FAILURE = u"openid adresinizle raptiye'ye girişte bir sorun oluştu.. lütfen daha sonra tekrar deneyin."
